[gd_scene load_steps=20 format=3 uid="uid://btiffj85aorcl"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_12kt7"]
[ext_resource type="Texture2D" uid="uid://4c707x5d2c1i" path="res://ui/assets/basic_sword.png" id="2_dke4b"]
[ext_resource type="Shader" path="res://ui/vignette.gdshader" id="2_esroo"]
[ext_resource type="Texture2D" uid="uid://bb682ai6kr0kj" path="res://ui/assets/sword_spin.png" id="3_isspi"]
[ext_resource type="Theme" uid="uid://dqaqitfpggg2l" path="res://ui/assets/theme.tres" id="3_l77dd"]
[ext_resource type="Texture2D" uid="uid://dt60fte2b2rvg" path="res://ui/assets/square.png" id="4_cuug8"]
[ext_resource type="Texture2D" uid="uid://br4nj4e8ua43" path="res://ui/assets/cross.png" id="5_jsf3i"]
[ext_resource type="Texture2D" uid="uid://dmy4i62fy00kt" path="res://ui/assets/sword_dash.png" id="5_xb5fw"]
[ext_resource type="Texture2D" uid="uid://mjhrbcntwqi8" path="res://ui/assets/circle.png" id="8_0nd3h"]
[ext_resource type="Texture2D" uid="uid://dxtq3f7k6s4q1" path="res://characters/character_1_still.png" id="9_4jrbp"]
[ext_resource type="PackedScene" uid="uid://chthx6clwul12" path="res://ui/inventory_slot.tscn" id="9_32bdy"]
[ext_resource type="Texture2D" uid="uid://drskicfg65jfh" path="res://ui/ui_sheet.png" id="9_47ikb"]
[ext_resource type="Texture2D" uid="uid://3kvbtgfd87ar" path="res://ui/assets/super.png" id="11_dgaqp"]
[ext_resource type="Texture2D" uid="uid://c86qt2dnio65b" path="res://ui/assets/sword_slot.png" id="12_vts8p"]
[ext_resource type="Texture2D" uid="uid://0ogod4vk77aq" path="res://ui/assets/armor_slot.png" id="13_dp3fg"]
[ext_resource type="Texture2D" uid="uid://2pix7s51fqhn" path="res://ui/assets/boots_slot.png" id="14_weqd7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xgw72"]
shader = ExtResource("2_esroo")
shader_parameter/tint = Color(0.537255, 0.117647, 0.168627, 1)
shader_parameter/open_amount = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bqd4x"]
shader = ExtResource("2_esroo")
shader_parameter/tint = null
shader_parameter/open_amount = 0.4

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dgibu"]
texture = ExtResource("9_47ikb")
region_rect = Rect2(25, 1, 3, 4)

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_12kt7")

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xgw72")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="."]
material = SubResource("ShaderMaterial_bqd4x")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l77dd")

[node name="Action Bar" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Action Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.5
offset_top = -16.0
offset_right = 18.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_constants/separation = -1
alignment = 1

[node name="Action 1" type="TextureRect" parent="Control/Action Bar/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_dke4b")
stretch_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Action Bar/HBoxContainer/Action 1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l77dd")
max_value = 1.0
value = 0.97
allow_greater = true
fill_mode = 3
show_percentage = false

[node name="Action 1 Button" type="TextureRect" parent="Control/Action Bar/HBoxContainer/Action 1"]
layout_mode = 2
offset_left = 2.0
offset_top = -13.0
offset_right = 11.0
offset_bottom = -3.0
size_flags_horizontal = 3
texture = ExtResource("4_cuug8")
stretch_mode = 2

[node name="Action 2" type="TextureRect" parent="Control/Action Bar/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_isspi")
stretch_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Action Bar/HBoxContainer/Action 2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l77dd")
max_value = 1.0
value = 0.97
allow_greater = true
fill_mode = 3
show_percentage = false

[node name="Action 2 Button" type="TextureRect" parent="Control/Action Bar/HBoxContainer/Action 2"]
layout_mode = 2
offset_left = 1.5
offset_top = -13.0
offset_right = 16.5
offset_bottom = -3.0
size_flags_horizontal = 3
texture = ExtResource("5_jsf3i")
stretch_mode = 2

[node name="Action 3" type="TextureRect" parent="Control/Action Bar/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_xb5fw")
stretch_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Action Bar/HBoxContainer/Action 3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l77dd")
max_value = 1.0
value = 0.97
allow_greater = true
fill_mode = 3
show_percentage = false

[node name="Action 3 Button" type="TextureRect" parent="Control/Action Bar/HBoxContainer/Action 3"]
layout_mode = 2
offset_left = 2.0
offset_top = -13.0
offset_right = 11.0
size_flags_horizontal = 3
texture = ExtResource("8_0nd3h")
stretch_mode = 2

[node name="Super" type="Sprite2D" parent="Control/Action Bar/HBoxContainer/Action 3"]
texture = ExtResource("11_dgaqp")
centered = false

[node name="Menu" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Control/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="Control" parent="Control/Menu/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/Menu/TabContainer/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_right = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("9_47ikb")
region_rect = Rect2(8, 0, 6, 6)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="TextureRect" type="TextureRect" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -10.5
offset_right = 6.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("9_4jrbp")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory Slot" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 16
equip_slot = true

[node name="Slot Icon" type="TextureRect" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer/Inventory Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_vts8p")

[node name="Inventory Slot2" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 17
equip_slot = true
type = 1

[node name="Slot Icon" type="TextureRect" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer/Inventory Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_dp3fg")

[node name="Inventory Slot3" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 18
equip_slot = true
type = 2

[node name="Slot Icon" type="TextureRect" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/Control/HBoxContainer/VBoxContainer/Inventory Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("14_weqd7")

[node name="CenterContainer" type="CenterContainer" parent="Control/Menu/TabContainer/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4

[node name="Inventory Slot" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Inventory Slot2" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 1

[node name="Inventory Slot3" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 2

[node name="Inventory Slot4" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
item = 0
slot = 3

[node name="Inventory Slot5" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 4

[node name="Inventory Slot6" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 5

[node name="Inventory Slot7" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 6

[node name="Inventory Slot8" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 7

[node name="Inventory Slot9" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 8

[node name="Inventory Slot10" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 9

[node name="Inventory Slot11" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 10

[node name="Inventory Slot12" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 11

[node name="Inventory Slot13" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 12

[node name="Inventory Slot14" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 13

[node name="Inventory Slot15" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 14

[node name="Inventory Slot16" parent="Control/Menu/TabContainer/Inventory/VBoxContainer/CenterContainer/GridContainer" instance=ExtResource("9_32bdy")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
slot = 15

[node name="Stats" type="Control" parent="Control/Menu/TabContainer"]
visible = false
layout_mode = 2

[node name="Menu" type="Control" parent="Control/Menu/TabContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="Control/Menu/TabContainer/Menu"]
layout_mode = 0
offset_left = 24.0
offset_top = 30.0
offset_right = 122.0
offset_bottom = 84.0
text = "save"

[node name="Console" type="LineEdit" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 4
placeholder_text = "enter command"

[node name="Status Bar" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Status Bar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -9.0
offset_right = 62.0
offset_bottom = -3.0
grow_vertical = 0
texture = ExtResource("9_47ikb")
region_rect = Rect2(19, 0, 6, 6)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Status Bar/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_dgibu")
value = 100.0
show_percentage = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/Status Bar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -17.0
offset_right = 62.0
offset_bottom = -11.0
grow_vertical = 0
texture = ExtResource("9_47ikb")
region_rect = Rect2(19, 0, 6, 6)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Status Bar/NinePatchRect2"]
modulate = Color(0, 5, 5, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_dgibu")
value = 100.0
show_percentage = false

[node name="Item" type="Sprite2D" parent="."]

[node name="Super Dash Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Control/Menu/TabContainer/Menu/Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="Control/Console" to="." method="_on_console_text_submitted"]
